--- a/_posts/2022-06-30-msn.md
+++ b/_posts/2022-06-30-msn.md
@@ -1,5 +1,6 @@
 ---
-layout: pageWithLink
+layout: page
+add-md-links: true
 title: Codes for the Trajectory Prediction Network MSN
 subtitle: "Official implementation of the paper \"MSN: Multi-Style Network for Trajectory Prediction\""
 # cover-img: /subassets/img/2022-07-01/eccv2022.png
