--- a/_posts/2024-03-02-sc.md
+++ b/_posts/2024-03-02-sc.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title: Release News
+title: Publication
 author: Conghao Wong
 subtitle: Our work (SocialCircle) has been accepted by CVPR2024
 tags: [news]
