Fix conference names (SC)

--- a/_posts/2024-03-02-sc.md
+++ b/_posts/2024-03-02-sc.md
@@ -16,6 +16,6 @@ comments: true
  * Copyright 2023 Conghao Wong, All Rights Reserved.
 -->
 
-Our work "SocialCircle: Learning the Angle-based Social Interaction Representation for Pedestrian Trajectory Prediction" has been accepted by IEEE/CVF Computer Vision and Pattern Recognition Conference 2024.
+Our work "SocialCircle: Learning the Angle-based Social Interaction Representation for Pedestrian Trajectory Prediction" has been accepted by IEEE/CVF Conference on Computer Vision and Pattern Recognition 2024.
 
 Project homepage: [https://cocoon2wong.github.io/SocialCircle](https://cocoon2wong.github.io/SocialCircle)
